limit cors method permissions